[package]
name = "yaltechTools"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
color-eyre = "0.6"
anyhow = "1"
toml = "0.8"
base64 = "0.22"
regex = "1"
pdf-extract = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
chrono = "0.4"
